force-app/main/default/objects/JournalLineItem__c/JournalLineItem__c.object-meta.xml
<CustomObject>
    <description>Journal Line Item</description>
    <label>Journal Line Item</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Journal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>