force-app/main/default/objects/JournalLineItem__c/fields/Journal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Journal_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>