force-app/main/default/objects/JournalLineItem__c/fields/Journal_Banker__c.field-meta.xml
<CustomField>
    <fullName>Journal_Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>