force-app/main/default/objects/JournalLineItem__c/fields/Journal_BankerAdded__c.field-meta.xml
<CustomField>
    <fullName>Journal_BankerAdded__c</fullName>
    <formula>Journal_Opportunity__r.Opp_BankerAdded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banker Added</label>
    <type>Checkbox</type>
</CustomField>