force-app/main/default/objects/JournalLineItem__c/fields/Journal_BankerName__c.field-meta.xml
<CustomField>
    <fullName>Journal_BankerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Banker Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>