force-app/main/default/objects/JournalLineItem__c/fields/Journal_BankerOfficerCode__c.field-meta.xml
<CustomField>
    <fullName>Journal_BankerOfficerCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Banker Officer Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>