force-app/main/default/objects/JournalLineItem__c/fields/Journal_BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>Journal_BranchNumber__c</fullName>
    <formula>Journal_Opportunity__r.Opp_BranchNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Number</label>
    <type>Text</type>
</CustomField>