force-app/main/default/objects/JournalLineItem__c/fields/Journal_Centre__c.field-meta.xml
<CustomField>
    <fullName>Journal_Centre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>