force-app/main/default/objects/JournalLineItem__c/fields/Journal_CIF__c.field-meta.xml
<CustomField>
    <fullName>Journal_CIF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIF</label>
    <length>30</length>
    <type>Text</type>
</CustomField>