force-app/main/default/objects/JournalLineItem__c/fields/Journal_CorpCode__c.field-meta.xml
<CustomField>
    <fullName>Journal_CorpCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corp Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>