force-app/main/default/objects/JournalLineItem__c/fields/Journal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Journal_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>