force-app/main/default/objects/JournalLineItem__c/fields/Journal_DealReference__c.field-meta.xml
<CustomField>
    <fullName>Journal_DealReference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>