force-app/main/default/objects/JournalLineItem__c/fields/Journal_Division__c.field-meta.xml
<CustomField>
    <fullName>Journal_Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>