force-app/main/default/objects/JournalLineItem__c/fields/Journal_ETReference__c.field-meta.xml
<CustomField>
    <fullName>Journal_ETReference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ET Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>