force-app/main/default/objects/JournalLineItem__c/fields/Journal_FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>Journal_FiscalYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiscal Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>