force-app/main/default/objects/JournalLineItem__c/fields/Journal_GLAccount__c.field-meta.xml
<CustomField>
    <fullName>Journal_GLAccount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>