force-app/main/default/objects/JournalLineItem__c/fields/Journal_Group__c.field-meta.xml
<CustomField>
    <fullName>Journal_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank</label>
    <length>30</length>
    <type>Text</type>
</CustomField>