force-app/main/default/objects/JournalLineItem__c/fields/Journal_IsQ6Available__c.field-meta.xml
<CustomField>
    <fullName>Journal_IsQ6Available__c</fullName>
    <formula>Journal_Opportunity__r.isQ6Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>s Q6 Available</label>
    <type>Checkbox</type>
</CustomField>