force-app/main/default/objects/JournalLineItem__c/fields/Journal_JournalLineItem__c.field-meta.xml
<CustomField>
    <fullName>Journal_JournalLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Line Item</label>
    <referenceTo>JournalLineItem__c</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>