force-app/main/default/objects/JournalLineItem__c/fields/Journal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Journal_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>