force-app/main/default/objects/JournalLineItem__c/fields/Journal_PMContact__c.field-meta.xml
<CustomField>
    <fullName>Journal_PMContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager(Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Journal Line Items (Product Manager(Contact))</relationshipLabel>
    <relationshipName>Journal_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>