force-app/main/default/objects/JournalLineItem__c/fields/Journal_PMContactName__c.field-meta.xml
<CustomField>
    <fullName>Journal_PMContactName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Manager Name(Contact)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>