force-app/main/default/objects/JournalLineItem__c/fields/Journal_PMTarget__c.field-meta.xml
<CustomField>
    <fullName>Journal_PMTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Target</label>
    <referenceTo>PMTarget__c</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>