force-app/main/default/objects/JournalLineItem__c/fields/Journal_Product__c.field-meta.xml
<CustomField>
    <fullName>Journal_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>