force-app/main/default/objects/JournalLineItem__c/fields/Journal_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Journal_ProductFamily__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>