force-app/main/default/objects/JournalLineItem__c/fields/Journal_Region__c.field-meta.xml
<CustomField>
    <fullName>Journal_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>