force-app/main/default/objects/JournalLineItem__c/fields/Journal_ReversalReason__c.field-meta.xml
<CustomField>
    <fullName>Journal_ReversalReason__c</fullName>
    <label>Reversal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Updated by Treasury User</fullName>
            </value>
            <value>
                <fullName>Trade Updated by Calypso</fullName>
            </value>
            <value>
                <fullName>Banker changed through TDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>