force-app/main/default/objects/JournalLineItem__c/fields/Journal_Team__c.field-meta.xml
<CustomField>
    <fullName>Journal_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Centre</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>