force-app/main/default/objects/JournalLineItem__c/fields/Journal_TeamName__c.field-meta.xml
<CustomField>
    <fullName>Journal_TeamName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Centre Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>