force-app/main/default/objects/JournalLineItem__c/fields/Journal_Trade_date__c.field-meta.xml
<CustomField>
    <fullName>Journal_Trade_date__c</fullName>
    <formula>Journal_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Trade date</label>
    <type>Date</type>
</CustomField>