force-app/main/default/objects/JournalLineItem__c/fields/Journal_TradeID__c.field-meta.xml
<CustomField>
    <fullName>Journal_TradeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>