force-app/main/default/objects/JournalLineItem__c/fields/Journal_TransactionType__c.field-meta.xml
<CustomField>
    <fullName>Journal_TransactionType__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>