force-app/main/default/objects/JournalLineItem__c/fields/Journal_TransferredforTargtes__c.field-meta.xml
<CustomField>
    <fullName>Journal_TransferredforTargtes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferred for Targets</label>
    <type>Checkbox</type>
</CustomField>