force-app/main/default/objects/JournalLineItem__c/fields/Journal_TSM__c.field-meta.xml
<CustomField>
    <fullName>Journal_TSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FRSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>