force-app/main/default/objects/JournalLineItem__c/fields/Journal_TSMManager__c.field-meta.xml
<CustomField>
    <fullName>Journal_TSMManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FRSM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journal_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>