force-app/main/default/objects/JournalLineItem__c/fields/Journal_TSMManagerName__c.field-meta.xml
<CustomField>
    <fullName>Journal_TSMManagerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FRSM Manager Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>