force-app/main/default/objects/JournalLineItem__c/fields/Journal_TSMName__c.field-meta.xml
<CustomField>
    <fullName>Journal_TSMName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FRSM Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>