force-app/main/default/objects/JournalLineItem__c/fields/Journal_TSMTarget__c.field-meta.xml
<CustomField>
    <fullName>Journal_TSMTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FRSM Target</label>
    <referenceTo>TSMTarget__c</referenceTo>
    <relationshipLabel>Journal Line Items</relationshipLabel>
    <relationshipName>Journal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>