force-app/main/default/objects/JournalLineItem__c/fields/Journal_VA_Amount__c.field-meta.xml
<CustomField>
    <fullName>Journal_VA_Amount__c</fullName>
    <formula>Journal_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity VA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>