force-app/main/default/objects/JournalLineItem__c/fields/Journal_WID__c.field-meta.xml
<CustomField>
    <fullName>Journal_WID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>