force-app/main/default/objects/JournalLineItem__c/listViews/All_Journal_Line_Items.listView-meta.xml
<ListView>
    <fullName>All_Journal_Line_Items</fullName>
    <columns>NAME</columns>
    <columns>Journal_JournalLineItem__c</columns>
    <columns>Journal_Opportunity__c</columns>
    <columns>Journal_Amount__c</columns>
    <columns>Journal_BankerName__c</columns>
    <columns>Journal_WID__c</columns>
    <columns>Journal_TeamName__c</columns>
    <columns>Journal_CorpCode__c</columns>
    <columns>Journal_GLAccount__c</columns>
    <columns>Journal_TSMTarget__c</columns>
    <columns>Journal_PMTarget__c</columns>
    <columns>Journal_BankerOfficerCode__c</columns>
    <columns>Journal_Trade_date__c</columns>
    <columns>Journal_CIF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Journal_Opportunity__c</field>
        <operation>startsWith</operation>
    </filters>
    <label>All Journal Line Items</label>
</ListView>